fix align

--- a/src/App.css
+++ b/src/App.css
@@ -118,5 +118,5 @@ html {
 .reviewImg {
   width: 100%;
   max-width: 650px;
-  min-width: 400px;
+  min-width: 350px;
 }
